# membrane_solver

./: .coverage  .gitignore  .pre-commit-config.yaml  :w  ;nn:w  AGENTS.md  CHANGELOG.md  EQUIANGULATION_AND_VERTEX_AVERAGING_ANALYSIS.md  FINAL_REFINEMENT_SUMMARY.md  FIXED_PROPERTY_INVESTIGATION_RESULTS.md  GEMINI.md  HARD_CONSTRAINTS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LINE_SEARCH_IMPROVEMENTS.md  MAIN_OPTIMIZATION_GUIDE.md  MANIFEST.in  NO_REFINE_FIX_SUMMARY.md  PARTIAL_REFINEMENT_ANALYSIS.md  README.md  REFINEMENT_FIXED_INHERITANCE_FIX.md  REFINEMENT_SCHEME_CHANGES.md  SURFACE_TENSION_FIX_SUMMARY.md  TEST_RESULTS_SUMMARY.md  benchmark_optimizations.py  benchmark_results.json  bkp.main1.py  bkp.main2.py  case_2b_analysis.md  check_performance.py  coverage.xml  cube_output.json  debug_cube_parsing.py  debug_fixed_issue.py  deploy.sh  energy.py  exceptions.py  final_diagnostic.py  geometry_entities.py  geometry_io.py  geometry_refinement.py  (+26 more)
.github/: pull_request_template.md
benchmarks/: benchmark_bending.py  benchmark_cap.py  benchmark_catenoid.py  benchmark_cube_good.py  benchmark_dented_cube.py  benchmark_flat_disk_tilt_mass_mode.py  benchmark_hemisphere.py  benchmark_kozlov_1disk_3d_induction_quick.py  benchmark_kozlov_1disk_3d_profile_hard_rim.py  benchmark_kozlov_1disk_3d_profile_hard_rim_free_disk.py  benchmark_kozlov_1disk_3d_profile_hard_rim_free_disk_light.py  benchmark_kozlov_1disk_3d_tensionless.py  benchmark_kozlov_annulus_decay_length.py  benchmark_profile_relax_light.py  benchmark_square_to_circle.py  benchmark_surface_energy.py  results.json  suite.py  (+4 more)
(+845 files in other folders)
