[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane-solver"
version = "0.0.0"
description = "Membrane and surface simulation tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.2",
  "PyYAML>=6",
  "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "commands*",
  "core*",
  "fortran_kernels*",
  "geometry*",
  "modules*",
  "runtime*",
  "visualization*",
  "membrane_solver*",
]

[tool.setuptools.package-data]
fortran_kernels = ["*.f90"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "outputs",
  "results",
  "evolver_test",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
]
ignore = [
  "E501", # line length is enforced later via formatting
  "E701", # Multiple statements on one line (colon)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "E402", # allow imports after sys.path tweaks in tests
]
